--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <base href="" />
+    <base href="demo/" />
     <title>QR Demo</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
